[project]
name = "cocapi"
version = "2.2.0"
description = "A python wrapper around clash of clans api"
authors = [{name = "Tony Benoy", email = "me@tonybenoy.com"}]
license = {text = "GPL-3.0"}
requires-python = ">=3.7.2"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["clash", "clans", "api", "wrapper", "supercell"]
dependencies = [
    "httpx>=0.23.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.277",
    "mypy>=0.971", 
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
pydantic = [
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/tonybenoy/cocapi"
Repository = "https://github.com/tonybenoy/cocapi"
Issues = "https://github.com/tonybenoy/cocapi/issues"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["cocapi"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "mypy>=1.4.1",
    "pytest-asyncio>=0.21.2",
]
